--- a/careers-values.html
+++ b/careers-values.html
@@ -273,7 +273,7 @@
                                 Returning your business
                               </p>
                             </a>
-    
+
                             <br />
                             <p class="card-info mt-2">
                               Lorem ipsum dolor sit amet consectetur,
@@ -333,7 +333,7 @@
                                 Returning your business
                               </p>
                             </a>
-    
+
                             <br />
                             <p class="card-info mt-2">
                               Lorem ipsum dolor sit amet consectetur,
@@ -363,7 +363,7 @@
                         <p class="fs-1-9 primary hover-cc custom-before me-5">
                             Xidmətlərimiz
                         </p>
-                        <p class="fs-1-9 primary hover-cc custom-before">CEO</p>
+                        <p class="fs-1-9 primary hover-cc custom-before">Vergi</p>
                     </div>
                 </div>
             </div>
@@ -371,53 +371,187 @@
         <section id="service-breadcrumb" class="white-bg">
             <div class="container pos-rel white-bg background ">
                 <div class="row background-height align-items-center">
-                    <div class="col-6   fw-600 service-title">CEO</div>
+                    <div class="col-6    service-title">Vergi</div>
 
                 </div>
             </div>
             </div>
         </section>
-        <section id="seo-about" class="py-5 my-5">
+        <section id="service-panel" class="py-5 mt-5">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-12">
-                        <p>Stockholm</p>
-                        <p>September, 2021</p>
-                        <p class="mt-70">As the COVID-19 pandemic continues to impact societies around the world, I am
-                            increasingly
-                            proud of the collective resilience shown by Grant Thornton member firms as they respond to
-                            these unique challenges while continuing to support their people and clients. As we share
-                            our experiences and learnings with each other the network is more connected today than ever
-                            before.</p>
-                        <p class="my-5">This year we launched our Go Beyond network strategy 2025.</p>
-                        <p>The strategy is designed to grow and protect the Grant Thornton network with a particular
-                            focus on risk management and quality, alongside the development of strategic capabilities
-                            and an international network culture. It is an intentional shift toward greater alignment on
-                            common methodologies, learning, technology platforms and culture.</p>
-                        <p class="my-5">It will guide the direction of the global network through to 2025, as we
-                            continually work to
-                            improve the sustainability and inclusiveness of our own operations and strive to make a
-                            positive impact on the clients, people, markets and communities where we operate - in line
-                            with the United Nations Sustainable Development Goals.
-                        </p>
-                        <p class="my-5">I strongly believe the private sector has a responsibility to deliver
-                            sustainable business
-                            solutions and, as a professional services organisation, we must play a pivotal role in
-                            progressing the sustainability agenda.</p>
-                        <p class="my-5">With 58,000 people in over 130 countries, Grant Thornton is committed to going
-                            beyond
-                            business as usual to deliver a different experience. More personal, agile and proactive. Our
-                            open-minded culture leaves space for a diverse range of opinions and we will continue to
-                            challenge conventional thinking to find better solutions. So our people, clients and
-                            communities can positively shape tomorrow.</p>
-                        <div>
-                            <img src="assets/img/about-us/sign.png" alt="">
+                    <div class="col-12 col-lg-2">
+                        <div class="nav-wrapper d-flex justify-content-between align-items-center">
+                            <p class="nav-drop-head primary  fs-1-9 hover-cc ls-2">
+                                FA Consulting Difference
+                            </p>
+                            <i class="fas fa-angle-right fs-1-9 hover-cc dropIcon"></i>
                         </div>
-                        <p class="mt-4">CEO, Grant Thornton International Ltd</p>
+                        <div class="nav-drop-menu d-flex flex-column my-3">
+                            <a href="./careers-values.html" class="primary hover-cc fs-1-7 fw-600 my-3">Our values</a>
+                            <a href="./careers-values.html" class="primary hover-cc fs-1-7 fw-600 my-3">Learning &
+                                development</a>
+                        </div>
+
+                        <div class="nav-wrapper d-flex justify-content-between align-items-center">
+                            <p class="nav-drop-head primary  fs-1-9 hover-cc ls-2">
+                                Students
+                            </p>
+                            <i class="fas fa-angle-right fs-1-9 hover-cc dropIcon"></i>
+                        </div>
+                        <div class="nav-drop-menu d-flex flex-column my-3">
+                            <a href="./student-career.html" class="primary hover-cc fs-1-7 fw-600 my-3">Graduate Fabio
+                                Luis de
+                                Sousa</a>
+                            <a href="./student-career.html" class="primary hover-cc fs-1-7 fw-600 my-3">Graduate - Mark
+                                Bishop</a>
+                            <a href="./student-career.html" class="primary hover-cc fs-1-7 fw-600 my-3">Graduate -
+                                Shannon Tan</a>
+                        </div>
+
+                        <div class="nav-wrapper d-flex justify-content-between align-items-center">
+                            <p class="nav-drop-head primary  fs-1-9 hover-cc ls-2">
+                                Experienced hires
+                            </p>
+                            <i class="fas fa-angle-right fs-1-9 hover-cc dropIcon"></i>
+                        </div>
+                        <div class="nav-drop-menu d-flex flex-column my-3">
+                            <a href="./student-career.html" class="primary hover-cc fs-1-7 fw-600 my-3">Experienced
+                                hires - Tony
+                                Windle</a>
+                            <a href="./student-career.html" class="primary hover-cc fs-1-7 fw-600 my-3">Experienced hire
+                                - Jessica
+                                Zetterquist</a>
+                            <a href="./student-career.html" class="primary hover-cc fs-1-7 fw-600 my-3">Experienced Hire
+                                - Sara Jane
+                                Knox</a>
+                        </div>
+                        <div class="wrapper flex flex-column">
+                            <div class="nav-wrapper d-flex justify-content-between align-items-center">
+                                <a href="./student-career.html"
+                                    class="nav-drop-head primary fw-500 fs-1-9 hover-cc ls-2">
+                                    FAQ
+                                </a>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="col-12 col-lg-9">
+                        <div class="service-card-container d-flex flex-wrap">
+                            <p class="fw-600 fs-3 main-title mt-5">
+                                Grant Thornton prides itself on being a values-driven organisation and we have 58,000
+                                people in over 130 countries who are passionately committed to these values.
+                            </p>
+                            <p class=" fs-2 main-title mt-5">
+                                We have six CLEARR values that underpin our culture and are embedded in everything we do
+                            </p>
+                            <p class="text fs-2 my-4">
+                                <span class="fw-600">Collaboration:</span> ask for help, give help – we work well
+                                together.
+                            </p>
+                            <p class="text fs-2 my-4">
+                                <span class="fw-600">Leadership:</span> have courage and inspire others – we challenge
+                                each other to be the best we can be.
+                            </p>
+
+                            <p class="text fs-2 my-4">
+                                <span class="fw-600">Excellence:</span> find a better way every time – we never get
+                                complacent.
+                            </p>
+
+                            <p class="text fs-2 my-4">
+                                <span class="fw-600">Agility:</span>
+                                think broadly, act quickly – we thrive on change.
+                            </p>
+
+                            <p class="text fs-2 my-4">
+                                <span class="fw-600">Responsibility:</span>
+                                use influence wisely – we own our actions.
+                            </p>
+                            <p class="text fs-2 my-4">
+                                <span class="fw-600">Respect:</span>
+                                listen and understand, be forthright – we create honest relationships.
+                            </p>
+                            <p class="text fs-2 my-4">If you choose a career with us, these CLEARR values will become a
+                                part
+                                of your Grant
+                                Thornton experience. Our values are the foundation of our organisation.</p>
+                            <p class="text fs-2 my-4">Learn more about how our global culture could shape your career
+                                with
+                                Grant Thornton.</p>
+
+                        </div>
+
                     </div>
                 </div>
 
+                <div class="row mt-60">
+                    <div class="col-lg-7">
+                        <p class="fs-2-4 fw-600 ">
+                            At Grant Thornton we develop transformational leaders throughout their career journey with
+                            global
+                            milestone programmes, strategic global assignments, and on-the-job experiences while
+                            creating
+                            meaningful connections along the way.
+                        </p>
+                    </div>
+                    <div class=" offset-1 col-lg-4 career-bg" style="min-height: 224px;">
+                        <div class="pd-career">
+                            <span>CONTACT</span>
+                            <p>Get in touch to find out more</p>
+                            <div class="my-3 ">
+                                <a href="#">Read more <i class="fas fa-arrow-right"
+                                        style="position: relative; top: 2px;"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-12">
+                        <p class="my-5 fs-1-8">The Senior Leadership Programme is aimed at CEOs and leaders in senior
+                            strategic
+                            positions
+                            and is ideal for those who are starting a board, board office, or firm wide leadership role.
+                            It is a global programme providing transformational leaders the opportunity to better
+                            understand themselves as a leader, their leadership journey to date, and how they will
+                            impact the global brand and their firm’s culture and future. Participants will have access
+                            to thought-provoking new thinking, leadership theory, and strategic frameworks from a
+                            premier academic institution, Harvard Business School.</p>
+                        <p class="my-5 fs-1-8">The Exceptional Coach Programme is an accredited coach development
+                            programme
+                            that provides
+                            our business leaders with a quality assured individual coach to practitioner level
+                            accreditation. This has been developed in-house with our business in mind and provides a
+                            complement to technical expertise in offering professional coaching to our people and
+                            clients</p>
+                        <p class="my-5 fs-1-8">The Advanced Leader Programme is for high-performing, experienced, and
+                            client-facing senior managers and directors. The programme enables participants to develop a
+                            more global perspective when serving clients, increase their own business acumen, manage
+                            client and employee relationships more effectively and work on winning international
+                            business. They will explore dynamic and challenging topics to enhance their self-confidence
+                            in delivering strategic and innovative solutions for our clients</p>
+                        <p class="my-5 fs-1-8">
+                            The Emerging Leaders Programme is aimed at managers and senior managers who are recognised
+                            as future leaders by their firms and is designed to support cross-border and cross-service
+                            line collaboration. Participants will network and collaborate cross regionally, develop
+                            their understanding of the regional market and the role of the growth advisor and improve
+                            the skills needed to lead successful and diverse teams and leverage individual strengths.
+                        </p>
+                    </div>
+                </div>
+                <div class="d-flex justify-content-around mt-60 mobile-2">
+                    <h3 class="fs-2-4">Share this page</h3>
+                    <div class="career-social">
+                        <ul class="d-flex mobile">
+                            <li><a href="#"><i class="fab fa-youtube fs-40 ml-30"></i></a></li>
+                            <li><a href="#"><i class="fab fa-linkedin-in fs-40 ml-30"></i></a></li>
+                            <li><a href="#"><i class="fab fa-twitter fs-40 ml-30"></i></a></li>
+                            <li><a href="#"><i class="fab fa-instagram fs-40 ml-30"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
+
         </section>
     </main>
 
