--- a/customers.html
+++ b/customers.html
@@ -21,17 +21,10 @@
   <header>
     <div class="container">
       <div class="row justify-content-between align-items-center top-header">
-        <div class="col-5 mini-logo">
-          <a href="./index.html">
-            <div class="image-wrapper">
-              <img src="./assets/img/logo-mini.webp" alt="logo of company" />
-            </div>
-          </a>
-        </div>
         <div class="col-5">
           <a href="#">
-            <div class="image-wrapper logo">
-              <img src="./assets/img/logo-w-text.webp" alt="logo of company" />
+            <div class="image-wrapper ">
+              <a href="index.html"><img src="./assets/img/footer-logo.png" alt="logo of company" /></a>
             </div>
           </a>
         </div>
@@ -83,11 +76,15 @@
                     <div class="col-7">
                       <div class="wrapper d-flex flex-column align-items-start px-5 ms-5">
                         <p class="title mt-1">Audit xidmətləri</p>
-                        <a href="./services-tax-3.html" class="primary hover-cc">Vergi hesabatlarının auditi</a>
-                        <a href="./services-tax-1.html" class="primary hover-cc">Maliyyə hesabatlarının auditi</a>
-                        <a href="./services-tax-4.html" class="primary hover-cc">Əmlakın qiymətləndirilməsinin
+                        <a href="./services-tax-3.html" class="primary hover-cc">Vergi
+                          hesabatlarının auditi</a>
+                        <a href="./services-tax-1.html" class="primary hover-cc">Maliyyə
+                          hesabatlarının auditi</a>
+                        <a href="./services-tax-4.html" class="primary hover-cc">Əmlakın
+                          qiymətləndirilməsinin
                           auditi</a>
-                        <a href="./services-tax-2.html" class="primary hover-cc">Nizamnamə kapitalının
+                        <a href="./services-tax-2.html" class="primary hover-cc">Nizamnamə
+                          kapitalının
                           formalaşdırılmasın auditi</a>
                       </div>
                     </div>
@@ -119,10 +116,14 @@
                     <div class="col-7">
                       <div class="wrapper d-flex flex-column align-items-start px-5 ms-5">
                         <p class="title mt-1">Vergi xidmətləri</p>
-                        <a href="./services-tax-1.html" class="primary hover-cc">Vergi auditi xidmətləri</a>
-                        <a href="./services-tax-2.html" class="primary hover-cc">Vergi məsləhət xidmətləri</a>
-                        <a href="./services-tax-3.html" class="primary hover-cc">Vergi planlaması xidmətləri</a>
-                        <a href="./services-tax-4.html" class="primary hover-cc">Vergi sahəsində sair xidmətlər</a>
+                        <a href="./services-tax-1.html" class="primary hover-cc">Vergi auditi
+                          xidmətləri</a>
+                        <a href="./services-tax-2.html" class="primary hover-cc">Vergi məsləhət
+                          xidmətləri</a>
+                        <a href="./services-tax-3.html" class="primary hover-cc">Vergi
+                          planlaması xidmətləri</a>
+                        <a href="./services-tax-4.html" class="primary hover-cc">Vergi sahəsində
+                          sair xidmətlər</a>
                       </div>
                     </div>
                     <div class="col-5 p-5 ms-5">
@@ -153,12 +154,14 @@
                     <div class="col-7">
                       <div class="wrapper d-flex flex-column align-items-start px-5 ms-5">
                         <p class="title mt-1">Muhasibatlıq xidmətləri</p>
-                        <a href="./services-accountment-2.html" class="primary hover-cc">Maliyyə uçotunun üzrə autsors
+                        <a href="./services-accountment-2.html" class="primary hover-cc">Maliyyə
+                          uçotunun üzrə autsors
                           xidmətləri</a>
                         <a href="./services-accountment-1.html" class="primary hover-cc">Muhasibat uçotunun üzrə autsors
                           xidməti</a>
 
-                        <a href="./services-accountment-3.html" class="primary hover-cc">Şirkət rəhbərliyinə xərclər və
+                        <a href="./services-accountment-3.html" class="primary hover-cc">Şirkət
+                          rəhbərliyinə xərclər və
                           gəlirlilik haqqında
                           hesabatların hazırlanması</a>
                       </div>
@@ -208,135 +211,136 @@
                       <a href="fields.html" class="primary hover-cc">Kənd Təsərüfatı, emal</a>
                       <a href="fields.html" class="primary hover-cc">Tikinti və əmlak sahəsi</a>
                       <a href="fields.html" class="primary hover-cc">Ticarət və Pərakəndəçilik</a>
-                      <a href="./industries-sub-page.html" class="primary hover-cc">Xəstəxanalar və hospitallar</a>
+                      <a href="./industries-sub-page.html" class="primary hover-cc">Xəstəxanalar
+                        və hospitallar</a>
                     </div>
                   </div>
 
                   <div class="col-9 sub-menu gray-bg d-flex d-none"></div>
                   <!-- <div
-                      class="col-9 assuranceInd-menu sub-menu gray-bg d-flex"
+                  class="col-9 assuranceInd-menu sub-menu gray-bg d-flex"
+                >
+                  <div class="col-7">
+                    <div
+                      class="wrapper d-flex flex-column align-items-start px-5 ms-5"
                     >
-                      <div class="col-7">
-                        <div
-                          class="wrapper d-flex flex-column align-items-start px-5 ms-5"
-                        >
-                          <p class="title">Assurance</p>
-                          <a href="#" class="primary hover-cc"
-                            >Business consulting services</a
-                          >
-                          <a href="#" class="primary hover-cc"
-                            >Business process solutions</a
-                          >
-                          <a href="#" class="primary hover-cc"
-                            >Business risk services</a
-                          >
-                          <a href="#" class="primary hover-cc">Cybersecurity</a>
-                          <a href="#" class="primary hover-cc"
-                            >Forensic and investigation services</a
-                          >
-                          <a href="#" class="primary hover-cc"
-                            >Mergers and acquisitions</a
-                          >
-                          <a href="#" class="primary hover-cc"
-                            >Recovery and reorganisation</a
-                          >
-                          <a href="#" class="primary hover-cc"
-                            >Transactional advisory services</a
-                          >
-                          <a href="#" class="primary hover-cc">Valuations</a>
-                        </div>
+                      <p class="title">Assurance</p>
+                      <a href="#" class="primary hover-cc"
+                        >Business consulting services</a
+                      >
+                      <a href="#" class="primary hover-cc"
+                        >Business process solutions</a
+                      >
+                      <a href="#" class="primary hover-cc"
+                        >Business risk services</a
+                      >
+                      <a href="#" class="primary hover-cc">Cybersecurity</a>
+                      <a href="#" class="primary hover-cc"
+                        >Forensic and investigation services</a
+                      >
+                      <a href="#" class="primary hover-cc"
+                        >Mergers and acquisitions</a
+                      >
+                      <a href="#" class="primary hover-cc"
+                        >Recovery and reorganisation</a
+                      >
+                      <a href="#" class="primary hover-cc"
+                        >Transactional advisory services</a
+                      >
+                      <a href="#" class="primary hover-cc">Valuations</a>
+                    </div>
+                  </div>
+                  <div class="col-5 p-5 ms-5">
+                    <div class="main-card">
+                      <div class="image-wrapper">
+                        <img
+                          src="./assets/img/client-behaviour-300x300.jpg"
+                          alt="Formula driver"
+                        />
                       </div>
-                      <div class="col-5 p-5 ms-5">
-                        <div class="main-card">
-                          <div class="image-wrapper">
-                            <img
-                              src="./assets/img/client-behaviour-300x300.jpg"
-                              alt="Formula driver"
-                            />
-                          </div>
-                          <div class="text-wrapper p-4">
-                            <div class="card-tag darkgray">
-                              BUSINESS RESILENCE
-                            </div>
-                            <a href="#">
-                              <p class="fs-2 primary my-4 fw-600">
-                                Returning your business
-                              </p>
-                            </a>
-
-                            <br />
-                            <p class="card-info mt-2">
-                              Lorem ipsum dolor sit amet consectetur,
-                              adipisicing elit. Quis, temporibus?
-                            </p>
-                          </div>
+                      <div class="text-wrapper p-4">
+                        <div class="card-tag darkgray">
+                          BUSINESS RESILENCE
                         </div>
+                        <a href="#">
+                          <p class="fs-2 primary my-4 fw-600">
+                            Returning your business
+                          </p>
+                        </a>
+
+                        <br />
+                        <p class="card-info mt-2">
+                          Lorem ipsum dolor sit amet consectetur,
+                          adipisicing elit. Quis, temporibus?
+                        </p>
                       </div>
                     </div>
+                  </div>
+                </div>
+                <div
+                  class="col-9 taxInd-menu sub-menu gray-bg d-flex d-none"
+                >
+                  <div class="col-7">
                     <div
-                      class="col-9 taxInd-menu sub-menu gray-bg d-flex d-none"
+                      class="wrapper d-flex flex-column align-items-start px-5 ms-5"
                     >
-                      <div class="col-7">
-                        <div
-                          class="wrapper d-flex flex-column align-items-start px-5 ms-5"
-                        >
-                          <p class="title">Tax</p>
-                          <a href="#" class="primary hover-cc"
-                            >Business consulting services</a
-                          >
-                          <a href="#" class="primary hover-cc"
-                            >Business process solutions</a
-                          >
-                          <a href="#" class="primary hover-cc"
-                            >Business risk services</a
-                          >
-                          <a href="#" class="primary hover-cc">Cybersecurity</a>
-                          <a href="#" class="primary hover-cc"
-                            >Forensic and investigation services</a
-                          >
-                          <a href="#" class="primary hover-cc"
-                            >Mergers and acquisitions</a
-                          >
-                          <a href="#" class="primary hover-cc"
-                            >Recovery and reorganisation</a
-                          >
-                          <a href="#" class="primary hover-cc"
-                            >Transactional advisory services</a
-                          >
-                          <a href="#" class="primary hover-cc">Valuations</a>
-                        </div>
+                      <p class="title">Tax</p>
+                      <a href="#" class="primary hover-cc"
+                        >Business consulting services</a
+                      >
+                      <a href="#" class="primary hover-cc"
+                        >Business process solutions</a
+                      >
+                      <a href="#" class="primary hover-cc"
+                        >Business risk services</a
+                      >
+                      <a href="#" class="primary hover-cc">Cybersecurity</a>
+                      <a href="#" class="primary hover-cc"
+                        >Forensic and investigation services</a
+                      >
+                      <a href="#" class="primary hover-cc"
+                        >Mergers and acquisitions</a
+                      >
+                      <a href="#" class="primary hover-cc"
+                        >Recovery and reorganisation</a
+                      >
+                      <a href="#" class="primary hover-cc"
+                        >Transactional advisory services</a
+                      >
+                      <a href="#" class="primary hover-cc">Valuations</a>
+                    </div>
+                  </div>
+                  <div class="col-5 p-5 ms-5">
+                    <div class="main-card">
+                      <div class="image-wrapper">
+                        <img
+                          src="./assets/img/client-behaviour-300x300.jpg"
+                          alt="Formula driver"
+                        />
                       </div>
-                      <div class="col-5 p-5 ms-5">
-                        <div class="main-card">
-                          <div class="image-wrapper">
-                            <img
-                              src="./assets/img/client-behaviour-300x300.jpg"
-                              alt="Formula driver"
-                            />
-                          </div>
-                          <div class="text-wrapper p-4">
-                            <div class="card-tag darkgray">
-                              BUSINESS RESILENCE
-                            </div>
-                            <a href="#">
-                              <p class="fs-2 primary my-4 fw-600">
-                                Returning your business
-                              </p>
-                            </a>
+                      <div class="text-wrapper p-4">
+                        <div class="card-tag darkgray">
+                          BUSINESS RESILENCE
+                        </div>
+                        <a href="#">
+                          <p class="fs-2 primary my-4 fw-600">
+                            Returning your business
+                          </p>
+                        </a>
 
-                            <br />
-                            <p class="card-info mt-2">
-                              Lorem ipsum dolor sit amet consectetur,
-                              adipisicing elit. Quis, temporibus?
-                            </p>
-                          </div>
-                        </div>
+                        <br />
+                        <p class="card-info mt-2">
+                          Lorem ipsum dolor sit amet consectetur,
+                          adipisicing elit. Quis, temporibus?
+                        </p>
                       </div>
-                    </div> -->
+                    </div>
+                  </div>
+                </div> -->
                 </div>
                 <!-- <a href="#" class="primary hover-cc sub-primary">
-                    Insights
-                  </a> -->
+                Insights
+              </a> -->
               </nav>
             </div>
           </div>
@@ -567,16 +571,16 @@
         </div>
         <div class="col-12 col-lg-6 social-icons d-flex justify-content-center">
           <a href="#">
-            <i class="fab fa-youtube fs-40 ml-70"></i>
+            <i class="fab fa-youtube fs-40 ml-70 ml-40"></i>
           </a>
           <a href="#">
-            <i class="fab fa-linkedin-in fs-40 ml-70"></i>
+            <i class="fab fa-linkedin-in fs-40 ml-70 ml-40"></i>
           </a>
           <a href="#">
-            <i class="fab fa-twitter fs-40 ml-70"></i>
+            <i class="fab fa-twitter fs-40 ml-70 ml-40"></i>
           </a>
           <a href="#">
-            <i class="fab fa-instagram fs-40 ml-70"></i>
+            <i class="fab fa-instagram fs-40 ml-70 ml-40"></i>
           </a>
         </div>
         <div class="col-12 footer-text">
