--- a/fields.html
+++ b/fields.html
@@ -21,17 +21,10 @@
     <header>
         <div class="container">
             <div class="row justify-content-between align-items-center top-header">
-                <div class="col-5 mini-logo">
-                    <a href="./index.html">
-                        <div class="image-wrapper">
-                            <img src="./assets/img/logo-mini.webp" alt="logo of company" />
-                        </div>
-                    </a>
-                </div>
                 <div class="col-5">
                     <a href="#">
-                        <div class="image-wrapper logo">
-                            <img src="./assets/img/logo-w-text.webp" alt="logo of company" />
+                        <div class="image-wrapper ">
+                            <a href="index.html"><img src="./assets/img/footer-logo.png" alt="logo of company" /></a>
                         </div>
                     </a>
                 </div>
@@ -370,7 +363,7 @@
                         <p class="fs-1-9 primary hover-cc custom-before me-5">
                             Xidmətlərimiz
                         </p>
-                        <p class="fs-1-9 primary hover-cc custom-before">Vergi</p>
+                        <p class="fs-1-9 primary hover-cc custom-before">Sahələr</p>
                     </div>
                 </div>
             </div>
@@ -378,7 +371,7 @@
         <section id="service-breadcrumb" class="white-bg">
             <div class="container pos-rel white-bg background ">
                 <div class="row background-height align-items-center">
-                    <div class="col-6    service-title">Vergi</div>
+                    <div class="col-6    service-title">Sahələr</div>
 
                 </div>
             </div>
@@ -473,6 +466,79 @@
                 </div>
             </div>
         </section>
+        <section id="create-card">
+            <div class="container">
+                <div class="d-flex justify-content-between">
+                    <h2>Related insights</h2>
+                    <a class="btn-cont" href="#">
+                        <button class="btndefault btn-r border-w ">
+                            Fullfill your potential
+                        </button>
+                    </a>
+                </div>
+                <div class="row">
+                    <div class="col-lg-4">
+                        <a href="#" target="_blank">
+                            <div class="card">
+                                <div class="card-body">
+                                    <img src="assets/img//client-1.jpg" alt="">
+                                    <div class="card-text">
+                                        <h3>LIFE SCIENCES</h3>
+                                        <h4 class="my-3">Lorem, ipsum dolor sit amet
+                                        </h4>
+                                        <span>5 Oct 2021</span>
+                                        <div class="my-3">
+                                            <a href="#">Read more <i class="fas fa-arrow-right"
+                                                    style="position: relative; top: 2px;"></i></a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-4">
+                        <a href="#" target="_blank">
+                            <div class="card">
+                                <div class="card-body">
+                                    <img src="assets/img//client-1.jpg" alt="">
+                                    <div class="card-text">
+                                        <h3>LIFE SCIENCES</h3>
+                                        <h4 class="my-3">Lorem, ipsum dolor sit amet
+                                        </h4>
+                                        <span>5 Oct 2021</span>
+                                        <div class="my-3">
+                                            <a href="#">Read more <i class="fas fa-arrow-right"
+                                                    style="position: relative; top: 2px;"></i></a>
+
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-4">
+                        <a href="#" target="_blank">
+                            <div class="card">
+                                <div class="card-body">
+                                    <img src="assets/img//client-1.jpg" alt="">
+                                    <div class="card-text">
+                                        <h3>LIFE SCIENCES</h3>
+                                        <h4 class="my-3">Lorem, ipsum dolor sit amet
+                                        </h4>
+                                        <span>5 Oct 2021</span>
+                                        <div class="my-3">
+                                            <a href="#">Read more <i class="fas fa-arrow-right"
+                                                    style="position: relative; top: 2px;"></i></a>
+
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer class="primary-bg">
@@ -550,16 +616,16 @@
                 </div>
                 <div class="col-12 col-lg-6 social-icons d-flex justify-content-center">
                     <a href="#">
-                        <i class="fab fa-youtube fs-40 ml-70"></i>
+                        <i class="fab fa-youtube fs-40 ml-70 ml-40"></i>
                     </a>
                     <a href="#">
-                        <i class="fab fa-linkedin-in fs-40 ml-70"></i>
+                        <i class="fab fa-linkedin-in fs-40 ml-70 ml-40"></i>
                     </a>
                     <a href="#">
-                        <i class="fab fa-twitter fs-40 ml-70"></i>
+                        <i class="fab fa-twitter fs-40 ml-70 ml-40"></i>
                     </a>
                     <a href="#">
-                        <i class="fab fa-instagram fs-40 ml-70"></i>
+                        <i class="fab fa-instagram fs-40 ml-70 ml-40"></i>
                     </a>
                 </div>
                 <div class="col-12 footer-text">
